# tinygles

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  x11.cpp  x11.hpp
src/examples/dummy/: CMakeLists.txt  glu.c  main.cpp  ui.c  ui.h  x11.c  x11.cpp  x11.h  x11.hpp
src/examples/gears/: CMakeLists.txt  main.cpp
src/examples/primitives/: CMakeLists.txt  primitives.cpp
src/examples/spinning-cube/: CMakeLists.txt  main.cpp
src/gles/: CMakeLists.txt  api.cpp  api.hpp  arrays.cpp  arrays.hpp  blend.cpp  clear.cpp  clear.hpp  clip.cpp  context.cpp  enable.cpp  error.cpp  fixed_point.hpp  fixed_point_operations.cpp  fixed_point_operations.hpp  fixed_point_type.hpp  fog.cpp  get.cpp  get.hpp  gl.h  gl_helpers.h  gl_str.h  glx.cpp  glx.hpp  image_util.cpp  image_util.hpp  init.cpp  light.cpp  light.hpp  math_tests.cpp  math_tests.hpp  matrix.cpp  matrix.hpp  matrix_utils.cpp  matrix_utils.hpp  misc.cpp  misc.hpp  mygl.h  specbuf.cpp  specbuf.hpp  (+13 more)
